--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register User</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Document</title>
 </head>
 <body>
-
-    <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
-        <a class="text-white bg-red-300 outline-none rounded-md " href="/logout">Logut</a>
-        <h3 class="text-3xl mb-5">User Profile</h3>
-        <h1 class="text-2xl mb-5">Hello, User </h1>
-    </div>
+    <h1>Hello ,Kapil</h1>
+    <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/home">Home</a>
+    <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
 </body>
 </html>
