--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,9 +12,9 @@
 
     <div class="flex justify-evenly ">
         <h3 class="text-3xl">Content Craft</h3>
-        <a class="bg-blue-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/write">Write</a>
-        <a class="bg-yellow-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/notify">Messages</a>
-        <a class="bg-yellow-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/profile">Profile</a>
+        <a class="bg-blue-800 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/write">Write</a>
+        <a class="bg-blue-800 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/notify">Messages</a>
+        <a class="bg-blue-800 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/profile">Profile</a>
 
     </div>
     <div>
