--- a/views/write.ejs
+++ b/views/write.ejs
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <h1>Write the content</h1>
-    <form action="/write" method="post">
-
-        <input type="text" name="email">
-        <input type="text" name="title">
-        <input type="text" name="content">
-        <input type="submit">
-    </form>
+<body class="bg-zinc-900 text-white">
+    <div class="main w-full min-h-screen ">
+        <h1 class="text-3xl m-5 ">Write the content</h1>
+        <div class="form text-white">
+            <form action="/write" method="post">
+                <input class="block w-full rounded-lg outline-none px-5 py-4 bg-zinc-800 m-5" type="text" placeholder="Title Goes" name="title">
+                <textarea class="block w-full h-20 rounded-lg outline-none px-5 py-4 bg-zinc-800 resize-none m-5" placeholder="Write your task details" name="content"></textarea>
+                <input class="mt-2 bg-yellow-600 px-5 py-4 rounded-lg m-5" type="submit" values="Create Tasks">
+            </form>
+        </div>
 </body>
 
 </html>
+<!-- bg-blue-500 rounded-md px-3 py-2 text-sm mb-5 inline-block -->
