Created feature of updating the post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,6 +107,7 @@
                 </div>
             </div>
             <a href="/read/<%= post._id %>" class="read-more">Read More</a>
+            <a href="/update/<%= post._id %>" class="read-more">Update Article </a>
             <% }); %>
     </div>
 
